errors.txt
codegen/neon_reducers/arm64_faddp_encoders.cpp:34:90: error: function definition is not allowed here
   34 | void gen_neon_faddp_2s(NewCodeGenerator& cg, const PairwiseReductionLoopStatement& node) {
      |                                                                                          ^
codegen/neon_reducers/arm64_faddp_encoders.cpp:61:70: error: expected '}'
   61 |     // PLACEHOLDER: FADDP.4H for FQUAD pairwise addition via registry
      |                                                                      ^
codegen/neon_reducers/arm64_faddp_encoders.cpp:16:90: note: to match this '{'
   16 | void gen_neon_faddp_4s(NewCodeGenerator& cg, const PairwiseReductionLoopStatement& node) {
      |                                                                                          ^
2 errors generated.
codegen/neon_reducers/arm64_fmaxp_encoders.cpp:34:90: error: function definition is not allowed here
   34 | void gen_neon_fmaxp_2s(NewCodeGenerator& cg, const PairwiseReductionLoopStatement& node) {
      |                                                                                          ^
codegen/neon_reducers/arm64_fmaxp_encoders.cpp:61:69: error: expected '}'
   61 |     // PLACEHOLDER: FMAXP.4H for FQUAD pairwise maximum via registry
      |                                                                     ^
codegen/neon_reducers/arm64_fmaxp_encoders.cpp:16:90: note: to match this '{'
   16 | void gen_neon_fmaxp_4s(NewCodeGenerator& cg, const PairwiseReductionLoopStatement& node) {
      |                                                                                          ^
2 errors generated.
codegen/neon_reducers/arm64_fminp_encoders.cpp:34:90: error: function definition is not allowed here
   34 | void gen_neon_fminp_2s(NewCodeGenerator& cg, const PairwiseReductionLoopStatement& node) {
      |                                                                                          ^
codegen/neon_reducers/arm64_fminp_encoders.cpp:62:2: error: expected '}'
   62 | }
      |  ^
codegen/neon_reducers/arm64_fminp_encoders.cpp:16:90: note: to match this '{'
   16 | void gen_neon_fminp_4s(NewCodeGenerator& cg, const PairwiseReductionLoopStatement& node) {
      |                                                                                          ^
2 errors generated.
